🎨 style(index.css): add margin and padding to body for better layout 🎨 style(index.css): increase font size of buttons in button-group for better visibility 🎨 style(index.css): add control section for better organization of buttons and score heading 🎨 style(index.css): add padding and align items to control section for better layout 🎨 style(index.css): remove padding-right from score-heading for better alignment 🎨 style(index.html): wrap start and stop buttons in a button-group div for better organization 🎨 style(main.js): add event listeners to start and stop buttons for better interactivity 🐛 fix(domManager.js): add stopButton and startButton properties to DomManager class for better button selection 🐛 fix(game.js): add isRunning property to Game class to prevent multiple game starts ✨ feat(game.js): add stop method to Game class to stop the game and show a game

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 2rem;
+}
+
 .game {
   width: 1024px;
   height: 600px;
@@ -28,9 +33,18 @@
   height: 49px;
 }
 
+.button-group > button {
+  font-size: 1rem;
+}
+
+.control {
+  display: flex;
+  align-items: center;
+  padding: 0px 20px;
+}
+
 .score-heading {
   color: white;
   width: fit-content;
   margin-left: auto;
-  padding-right: 1rem;
 }
